<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/android_com"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121212">

    <!-- 상단 텍스트 -->
    <TextView
        android:id="@+id/ch_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginStart="60dp"
        android:text="@string/ch_title"
        android:textAppearance="@style/TextStyleLarge" />

    <!-- 이미지 -->
    <View
        android:id="@+id/image_ch"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:background="@drawable/image_ch" />

    <!-- 구분선 -->
    <View
        android:id="@+id/line_separator"
        android:layout_width="90%"
        android:layout_height="1dp"
        android:layout_below="@id/image_ch"
        android:layout_marginTop="50dp"
        android:layout_marginStart="5%"
        android:layout_marginEnd="5%"
        android:background="@drawable/line_separator" />

    <!-- 환율 정보 -->
    <TextView
        android:id="@+id/exchange_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line_separator"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/exchange_info"
        android:textAppearance="@style/TextStyleMedium" />

    <!-- 추가 정보 -->
    <TextView
        android:id="@+id/imf_sdr_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:text="@string/imf_sdr_info"
        android:textAppearance="@style/TextStyleSmall"
        android:gravity="center" />

</RelativeLayout>
